--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -17,11 +17,18 @@
 
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
         <item name="android:textViewStyle">@style/MyTextViewStyle</item>
+        <item name="android:buttonStyle">@style/MyButtonStyle</item>
     </style>
 
     <style name="MyTextViewStyle" parent="android:Widget.TextView">
         <item name="android:textStyle">bold|italic</item>
         <item name="android:fontFamily">serif</item>
+    </style>
+    
+    <style name="MyButtonStyle" parent="android:Widget.Button">
+        <item name="android:textStyle">bold|italic</item>
+        <item name="android:fontFamily">serif</item>
+        <item name="android:textColor">#F3E5AB</item>
     </style>
 
 </resources>
